fix: fix bugs with User LogIn/LogOut option on tablet/desktop menu

--- a/src/features/navbar/FilterPanel/FilterPanel.module.scss
+++ b/src/features/navbar/FilterPanel/FilterPanel.module.scss
@@ -71,6 +71,7 @@
     justify-content: space-between;
     width: 100%;
     gap: 10px;
+    margin-bottom: 50px;
     a:hover {
       text-decoration: none;
     }
